@@ -1,12 +1,0 @@
-#!/bin/bash
-# usage install_esp_branch v5.4.1
-if [ -z "$1" ]; then
-    echo "usage example: `install_esp_branch v.5.4.1`"
-    exit
-fi
-
-rm -rf ~/esp/esp-idf
-rm -rf ~/.espressif
-git clone --recursive https://github.com/espressif/esp-idf.git -b "$1" ~/esp/esp-idf
-bash ~/esp/esp-idf/install.sh all
-python ~/esp/esp-idf/tools/idf_tools.py install all
